# Fennec

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  __init__.py  agent.py  cli.py  docker-compose.yml  langgraph.json  pyproject.toml  rebuild_image.sh  requirements.txt
cli/: __init__.py  main.py
cli/art/: __init__.py  banner.py  generate_art.py  generated_art.py  landing.py  pixelart_to_ascii.py
docs/: ARCHITECTURE.md
fixtures/: sample_recon.json
frontend/: .gitignore  Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/public/: robots.txt  sitemap.xml
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
linux/: Dockerfile  Makefile  build-linux-image.sh
linux/wordlists/: common.txt
src/: __init__.py
src/agents/: __init__.py  analyst.py  coder.py  emission.py  human_review.py  pentester.py  recon.py
src/api/: __init__.py  events.py  job_store.py  server.py
src/cli/: __init__.py  visualizer.py
src/config/: __init__.py  settings.py
src/docker/: __init__.py  client.py
src/graph/: __init__.py  role_based_graph.py
src/middleware/: budget_aware_prompt.py  finalizeBeforeModelLimitMiddleware.py  truncate_tool_outputs.py
src/orchestration/: __init__.py  hypothesis_manager.py
src/prompts/: __init__.py  builder.py  templates.py
src/schemas/: __init__.py  analyst_result.py  coder_result.py  delegation.py  (+4 more)
tests/: conftest.py  test_dashboard_e2e.py  test_recon_fallback_large_context.py  test_structured_extraction_live.py
(+90 files in other folders)
